v2/errors-and-rate-limits.mdx
---
title: "Errors and rate limits"
description: "How PingMe reports errors, what each error type means, and how to stay within rate limits."
icon: "triangle-exclamation"
---

PingMe uses conventional HTTP status codes and returns a consistent JSON error body so you can handle failures the same way on every endpoint.

## Error format

Every non-2xx response has this shape:

```json
{
  "error": {
    "type": "validation_error",
    "code": "invalid_channel",
    "message": "'fax' is not a supported channel. Supported: email, sms, push, in_app, slack.",
    "param": "channels",
    "doc_url": "https://docs.pingme.dev/v2/errors-and-rate-limits#validation-error"
  }
}
```

| Field | Description |
| :-- | :-- |
| `type` | The category of error. Branch on this in your code. |
| `code` | A stable, specific identifier. Safe to match on; new codes may be added but existing ones don't change meaning. |
| `message` | Human-readable explanation. Wording may change — don't parse it. |
| `param` | For validation errors, the request field at fault. Otherwise `null`. |
| `doc_url` | A link to the relevant section of these docs. |

## Error types

### `validation_error` (400)

The request body or parameters are malformed. Fix the request; retrying without changes will fail again. Common codes: `missing_required_field`, `invalid_channel`, `invalid_phone_number`, `template_and_content_both_set`, `scheduled_at_too_far`.

### `authentication_error` (401)

The API key is missing, malformed, or revoked. See [API keys](/v2/api-keys#troubleshooting).

### `not_found` (404)

No resource with that ID exists in this workspace and mode. Remember that test and live data are isolated.

### `conflict` (409)

The request is valid but the resource is in a state that doesn't allow it — for example, cancelling a message that has already been delivered (`message_not_cancellable`).

### `rate_limited` (429)

You've exceeded your per-minute request budget. Wait for the number of seconds in the `Retry-After` header, then retry. See [Rate limits](#rate-limits).

### `server_error` (500, 503)

Something failed on PingMe's side. These are safe to retry with backoff. If a `503` persists, check [status.pingme.dev](https://status.pingme.dev).

## Rate limits

Rate limits are applied per workspace, per minute, across all keys in the same mode.

| Plan | Requests per minute |
| :-- | :-- |
| Starter | 30 |
| Growth | 300 |
| Enterprise | Custom — typically 3,000+ |

Every response includes the current window in headers:

```http
RateLimit-Limit: 300
RateLimit-Remaining: 287
RateLimit-Reset: 41
```

When you exceed the limit, the response is `429` with a `Retry-After` header:

```json
{
  "error": {
    "type": "rate_limited",
    "code": "rate_limit_exceeded",
    "message": "You have exceeded 300 requests per minute. Retry after 12 seconds.",
    "param": null,
    "doc_url": "https://docs.pingme.dev/v2/errors-and-rate-limits#rate-limits"
  }
}
```

<Tip>
  Sending to many recipients? You don't need one request per recipient per channel — one `POST /messages` with several `channels` counts as a single request. For bulk campaigns, spread sends over time with `scheduled_at` rather than bursting.
</Tip>

## Retrying safely

Retry `429`, `500`, and `503` with exponential backoff and jitter. Never retry `400`, `401`, `404`, or `409` without changing the request.

Because sends are not naturally idempotent, include an `Idempotency-Key` header on `POST /messages`. If your first attempt actually succeeded but you never saw the response, the retry returns the original message instead of sending a duplicate.

```python
import time, uuid, requests

def send_with_retry(payload, api_key, attempts=5):
    key = str(uuid.uuid4())
    for i in range(attempts):
        r = requests.post(
            "https://api.pingme.dev/v2/messages",
            headers={
                "Authorization": f"Bearer {api_key}",
                "Idempotency-Key": key,
            },
            json=payload,
        )
        if r.status_code < 400:
            return r.json()
        if r.status_code in (429, 500, 503):
            wait = int(r.headers.get("Retry-After", 2 ** i))
            time.sleep(wait)
            continue
        r.raise_for_status()
    raise RuntimeError("gave up after retries")
```

Idempotency keys are remembered for 24 hours and are scoped to your workspace and mode.
